CHANGES
*******

0.9 (unreleased)
================

- Expose ``body_model_predicate`` to the public Morepath API. You
  can now say your predicate comes after it.

- Expose ``LAST_VIEW_PREDICATE`` to the Morepath API. This is the last
  predicate defined by the Morepath core.

- Update the predicate documentation.

- Updated the more.static doc to reflect changes in it.

- Fix doc for grouping views with the ``with`` statement.

0.8 (2014-11-13)
================

- **Breaking change**. Reg 0.9 introduces a new, more powerful
  way to create dispatch functions, and this has resulted in
  a new, incompatible Reg API.

  Morepath has been adjusted to make use of the new Reg. This won't
  affect many Morepath applications, and they should be able to
  continue unchanged. But some Morepath extensions and advanced
  applications may break, so you should be aware of the changes.

  * The ``@App.function`` directive has changed from this::

      class A(object):
          pass

      class B(object):
          pass

      @reg.generic
      def dispatch_function(a, b):
          pass

      @App.function(dispatch_function, A, B)
      def dispatched_to(a, b):
          return 'dispatched to A and B'

    to this::

      class A(object):
          pass

      class B(object):
          pass

      @reg.dispatch('a', 'b')
      def dispatch_function(a, b):
          pass

      @App.function(dispatch_function, a=A, b=B)
      def dispatched_to(a, b):
          return 'dispatched to A and B'

    The new system in Reg (see its docs_) is a lot more flexible than
    what we had before. When you use ``function`` you don't need to
    know about the order of the predicates anymore -- this is
    determined by the arguments to ``@reg.dispatch()``. You can now
    also have function arguments that Reg ignores for dispatch.

  * The ``@App.predicate`` and ``@App.predicate_fallback`` directive
    have changed. You can now install custom predicates and fallbacks